; ModuleID = '/home/carl/AnghaBench/lwan/src/lib/extr_lwan-array.c_lwan_array_sort.c'
source_filename = "/home/carl/AnghaBench/lwan/src/lib/extr_lwan-array.c_lwan_array_sort.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.lwan_array = type { i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lwan_array_sort(%struct.lwan_array* %0, i64 %1, i32 (i8*, i8*)* %2) #0 {
  %4 = alloca %struct.lwan_array*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32 (i8*, i8*)*, align 8
  store %struct.lwan_array* %0, %struct.lwan_array** %4, align 8
  store i64 %1, i64* %5, align 8
  store i32 (i8*, i8*)* %2, i32 (i8*, i8*)** %6, align 8
  %7 = load %struct.lwan_array*, %struct.lwan_array** %4, align 8
  %8 = getelementptr inbounds %struct.lwan_array, %struct.lwan_array* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 4
  %10 = call i64 @LIKELY(i32 %9)
  %11 = icmp ne i64 %10, 0
  br i1 %11, label %12, label %22

12:                                               ; preds = %3
  %13 = load %struct.lwan_array*, %struct.lwan_array** %4, align 8
  %14 = getelementptr inbounds %struct.lwan_array, %struct.lwan_array* %13, i32 0, i32 1
  %15 = load i32, i32* %14, align 4
  %16 = load %struct.lwan_array*, %struct.lwan_array** %4, align 8
  %17 = getelementptr inbounds %struct.lwan_array, %struct.lwan_array* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i64, i64* %5, align 8
  %20 = load i32 (i8*, i8*)*, i32 (i8*, i8*)** %6, align 8
  %21 = call i32 @qsort(i32 %15, i32 %18, i64 %19, i32 (i8*, i8*)* %20)
  br label %22

22:                                               ; preds = %12, %3
  ret void
}

declare dso_local i64 @LIKELY(i32) #1

declare dso_local i32 @qsort(i32, i32, i64, i32 (i8*, i8*)*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
